--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ codegen-units = 1
 
 [dependencies]
 clap = "3.0.0-beta.2"
-flexi_logger = "0.15"
-hyper="0.13"
+log4rs = "1.0"
+hyper = "0.13"
 log = "0.4"
 rand = "0.7"
 rand_core = "0.5"
