--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ codegen-units = 1
 
 [dependencies]
 clap = "3.0.0-beta.2"
-flexi_logger = "0.15"
-hyper="0.13"
+flexi_logger = "0.18"
+hyper= "0.14"
 log = "0.4"
-rand = "0.7"
-rand_core = "0.5"
-regex = "1.3"
-reqwest = "0.10"
-tokio = { version = "0.2", features = ["rt-threaded", "net", "signal", "io-std", "macros"] }
+rand = "0.8"
+rand_core = "0.6"
+regex = "1.5"
+reqwest = "0.11"
+tokio = { version = "1.6", features = ["rt-multi-thread", "net", "signal", "io-std", "macros"] }
