--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,4 @@ rand = "0.8"
 rand_core = "0.6"
 regex = "1.5"
 reqwest = "0.11"
-tokio = { version = "0.2", features = ["rt-threaded", "net", "signal", "io-std", "macros"] }
+tokio = { version = "1.6", features = ["rt-multi-thread", "net", "signal", "io-std", "macros"] }
