--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ codegen-units = 1
 [dependencies]
 clap = "3.0.0-beta.2"
 flexi_logger = "0.15"
-hyper = { version = "0.14", features = ["server", "tcp"] }
+hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
 log = "0.4"
 rand = "0.8"
 rand_core = "0.6"
