--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,11 @@ codegen-units = 1
 
 [dependencies]
 clap = "3.0.0-beta.2"
-flexi_logger = "0.15"
-hyper = { version = "0.14", features = ["client", "http1", "http2", "server", "stream", "tcp"] }
+flexi_logger = "0.17"
+hyper = { version = "0.14", features = ["server"] }
 log = "0.4"
 rand = "0.8"
 rand_core = "0.6"
 regex = "1.5"
 reqwest = "0.11"
-tokio = { version = "1.6", features = ["rt-multi-thread", "net", "signal", "io-std", "macros"] }
+tokio = { version = "1.6", features = ["rt-multi-thread", "signal", "io-std", "macros"] }
